# switchboard-plug-notifications

./: CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: SettingsOption.css  io.elementary.switchboard-plug-notifications.appdata.xml.in  io.elementary.switchboard.notifications.appdata.xml.in  meson.build  notifications.appdata.xml.in  notifications.gresource.xml  notifications.metainfo.xml.in  pantheon-plug-notifications.desktop  switchboard-plug-notifications.gresource.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+158 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  NotifySettings.vala  Plug.vala  meson.build
src/Backend/: App.vala  NotifyCenterBlacklist.vala  NotifyManager.vala  NotifySettings.vala
src/Widgets/: AppEntry.vala  AppItem.vala  AppList.vala  AppSettings.vala  AppSettingsView.vala  AppsView.vala  Footer.vala  InfoScreen.vala  MainView.vala  SettingsHeader.vala  SettingsOption.vala  Sidebar.vala
